--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ademola Agboola - Biography</title>
 </head>
 
 <body>
+    <header>
+        <h1>The Man, The Myth, The Legend</h1>
+        <p>The story of Ademola</p>
+    </header>
 
+    <section>
+        <h2>Biography:</h2>
+
+        <p>
+            In the year 2000 <em>I was born</em>! I <em>conquered</em> daycare, <em>ruled</em> grade school, and
+            <em>destroyed</em> high school.
+            <br>After that, I disapeared like the avatar.
+        </p>
+    </section>
 </body>
 
 </html>
